# termdiff

./: .fastconventional.yaml  .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  Justfile  README.md
.cargo/: mutants.toml
.forgejo/workflows/: ci.yml  test-and-tag.yml
.github/workflows/: test-and-tag.yml
benches/: diff_benchmark.rs
benches/fixtures/: large_text_new.txt  large_text_old.txt
ci/: concourse.yaml
src/: cmd.rs  draw_diff.rs  edge_case_tests.rs  lib.rs  themes.rs
src/diff_algorithm/: common.rs  factory.rs  mod.rs  myers.rs  similar.rs  tests.rs
src/output/: mod.rs  plain.rs  protocol.rs
src/themes/: arrows.rs  arrows_color.rs  mod.rs  signs.rs  signs_color.rs  theme.rs
tests/: algorithms.rs  diff.rs  edge_cases.rs
