[package]
name = "termdiff"
description = "Write a diff with color codes to a string"
version = "1.1.0"
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/termdiff"
keywords = ["diff", "terminal"]
categories = ["development-tools", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
similar = { version = "2.1.0", features = ["inline"] }
crossterm = "0.22.1"
