[package]
name = "termdiff"
description = "Write a diff with color codes to a string"
version = "3.1.3"
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/PurpleBooth/termdiff"
keywords = ["diff", "terminal", "text", "comparison"]
categories = ["development-tools", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
similar = { version = "2.6.0", features = ["inline"] }
crossterm = "0.28.0"
